# mnemotion

./: .pre-commit-config.yaml  README.md  example.yaml  pyproject.toml
mnemotion/: __init__.py  config.py  main.py  pipeline.py
